<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MACHINE" Id="{6d72bf07-39e9-4d45-a2dc-223db0f684b0}">
    <Declaration><![CDATA[// Utility structure to reference to fbEM
TYPE ST_MACHINE :
STRUCT
	fbEM : REFERENCE TO fbEM;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>